# RTTGameMinimumViableProduct

./: .gitignore  CMakeLists.txt  PreMVPNotes.md  devlog.md  licenses.md  main.cpp  theBigLongList.md
assets/: ArleighBurke.xcf  CruiseMissileTruck.xcf  IverHuitfeldtFrigate.xcf  SAMTruck.xcf  SlavaCruiser.xcf  TEMP.txt  TEMP_atlantic.txt  atlanticFull.xcf  depot.xcf  greenland.xcf
assets/gui/: movementPhase.xcf  playButtons.xcf  sidebarSketch.xcf
assets/units/ArleighBurke/: unitStats.txt
assets/units/IverHuitfeldtFrigate/: unitStats.txt
assets/units/NeptuneLauncherDK/: unitStats.txt
assets/units/SAMTruckDK/: animationstats.txt  unitStats.txt
assets/units/SlavaCruiser/: unitStats.txt
assets/units/city/: unitStats.txt
assets/units/depot/: unitStats.txt
assets/units/factory/: unitStats.txt
assets/units/powerplant/: unitStats.txt
assets/units/radarTower/: unitStats.txt
include/: AIMovementClient.h  attackPlan.h  engine.h  gui.h  hexGrid.h  hexTile.h  particle.h  phase.h  physicsCake.h  scenario.h  soundwrap.h  textBoxGenerator.h  texwrap.h  unit.h  unitType.h
src/: AIMovementClient.cpp  attackPlan.cpp  engine.cpp  gui.cpp  hexGrid.cpp  physicsCake.cpp  scenario.cpp  scenarios.cpp  texwrap.cpp  unit.cpp  unitType.cpp
